--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/rte": "^3.4.3",
     "dotenv": "^16.4.7",
+    "draft-js": "^0.11.7",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "next": "^15.1.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-quill": "^0.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
